--- a/src/templates/landing_cursos.html
+++ b/src/templates/landing_cursos.html
@@ -1349,6 +1349,8 @@ polo/2/cursos/        @media (max-width: 480px) {
                 <a href="{% url 'lista_polos' %}" class="navbar-link">Cursos</a>
                 {% if user.is_authenticated and es_empresa %}
                 <a href="{% url 'empresas:mi_empresa' %}" class="navbar-link">Punto Empresarial</a>
+                {% elif user.is_authenticated and user.is_staff or user.is_superuser %}
+                <a href="{% url 'empresas:gestion_empresas' %}" class="navbar-link">Punto Empresarial</a>
                 {% elif not user.is_authenticated %}
                 <a href="#" class="navbar-link" onclick="openRegistroModal('empresa'); return false;">Punto Empresarial</a>
                 {% endif %}
