recupero de contra

--- a/src/templates/registration/password_reset_confirm.html
+++ b/src/templates/registration/password_reset_confirm.html
@@ -103,7 +103,7 @@
 <div class="reset-container">
     <div class="reset-card">
         <div class="reset-header">
-            <img src="{% static 'img/LOGO COLOR.png' %}" alt="Logo Polo">
+            <img src="{% static 'img/logosesion.png' %}" alt="Logo Polo">
             <h2>🔑 Nueva Contraseña</h2>
             <p>Ingresa tu nueva contraseña</p>
         </div>
