--- a/src/templates/registration/password_reset_email.html
+++ b/src/templates/registration/password_reset_email.html
@@ -71,7 +71,7 @@
         <div class="content">
             <p>Hola <strong>{{ nombre }}</strong>,</p>
             
-            <p>Hemos recibido una solicitud para restablecer la contraseña de tu cuenta en <strong>Edu-Polo</strong>.</p>
+            <p>Hemos recibido una solicitud para restablecer la contraseña de tu cuenta en la app<strong>Polos Creativos</strong>.</p>
             
             <p>Para crear una nueva contraseña, haz clic en el siguiente enlace:</p>
             
@@ -96,7 +96,7 @@
         
         <div class="footer">
             <p>Este es un email automático, por favor no respondas a este mensaje.</p>
-            <p>&copy; 2025 Edu-Polo - Agencia de Innovación TDF</p>
+            <p>&copy; 2025 Polos Creativos - Agencia de Innovación TDF</p>
         </div>
     </div>
 </body>
